--- a/index.html
+++ b/index.html
@@ -50,48 +50,109 @@
     </header>
 
     <div class="about">
-        <p class="about-title">About</p>
+        <p class="section-title">About</p>
         <p class="about-description">
             I am Farhad, currently pursuing a BSc in Computer Science and Engineering at Brac University. I am a
-            dedicated
-            competitive programmer with a passion for problem-solving and algorithmic challenges. Throughout my
-            undergraduate studies, I have actively participated in numerous programming contests, refining my skills in
-            data
-            structures, algorithms, and writing efficient code under pressure. I am particularly interested in software
-            engineering, where I aim to apply my technical knowledge to solve real-world problems. Additionally, I am
-            deeply
-            drawn to Artificial Intelligence, especially Large Language Models, and am excited about exploring their
-            transformative potential across industries. My commitment to both competitive programming and emerging
-            technologies
+            dedicated competitive programmer with a passion for problem-solving and algorithmic challenges. Throughout
+            my undergraduate studies, I have actively participated in numerous programming contests, refining my skills
+            in data structures, algorithms, and writing efficient code under pressure. I am particularly interested in
+            software engineering, where I aim to apply my technical knowledge to solve real-world problems.
+            Additionally, I am deeply drawn to Artificial Intelligence, especially Large Language Models, and am excited
+            about exploring their transformative potential across industries. My commitment to both competitive
+            programming and emerging technologies drives me to continuously learn and grow in the field.
         </p>
+
+        <div class="about-info">
+            <div class="name-and-icon">
+                <img src="images/Group 14.svg" alt="">
+                <p>Full Name</p>
+                <p>K. M. Abul Farhad-Ibn-Alam</p>
+
+            </div>
+            <div class="name-and-icon">
+                <img src="images/Group 14.svg" alt="">
+                <p>Email Address</p>
+                <p>abulfarhad.ibnalam@gmail.com</p>
+
+            </div>
+            <div class="name-and-icon">
+                <img src="images/Group 14.svg" alt="">
+                <p>Linkedin</p>
+                <p>www.linkedin.com/in/abulfarhad/</p>
+
+            </div>
+            <div class="name-and-icon">
+                <img src="images/Group 14.svg" alt="">
+                <p>Phone</p>
+                <p>+8801521-561986</p>
+
+            </div>
+        </div>
+
+        <div class="what-i-do">
+            <p class="section-title">What I do</p>
+            <div class="skill-section">
+                <div class="skill-info-container">
+                    <img src="images/Vector (2).png" alt="">
+                    <p class="skill-name">Software<br>Development</p>
+                </div>
+
+                <div class="skill-info-container">
+                    <img src="images/Vector (1).png" alt="">
+                    <p class="skill-name">Web<br>Development</p>
+                </div>
+
+                <div class="skill-info-container">
+                    <img src="images/Vector.png" alt="">
+                    <p class="skill-name">Competitive<br>Programming</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="my-skills">
+            <p class="section-title">My Skills</p>
+            <div class="all-skills">
+                <div class="skill">
+                    <p class="lang-rating">80%<br>
+                    <span class="lang-name">C++</span></p>
+                </div>
+
+                <div class="skill">
+                    <p class="lang-rating">80% <br>
+                        <span class="lang-name">Python</span>
+                    </p>
+                </div>
+
+                <div class="skill">
+                    <p class="lang-rating">60% <br>
+                        <span class="lang-name">HTML</span>
+                    </p>
+                </div>
+
+                <div class="skill">
+                    <p class="lang-rating">40% <br>
+                        <span class="lang-name">CSS</span>
+                    </p>
+                </div>
+
+                <div class="skill">
+                    <p class="lang-rating">50% <br>
+                        <span class="lang-name">JavaScript</span>
+                    </p>
+                </div>
+
+                <!-- <div class="skill">
+                    <p class="lang-rating">50%</p>
+                    <p class="lang-name">JavaScript</p>
+                </div> -->
+
+            </div>
+        </div>
     </div>
 
-    <div class="about-info">
-        <div class="name-and-icon">
-            <img src="images/Group 14.svg" alt="">
-            <p>Full Name</p>
-            <p>K. M. Abul Farhad-Ibn-Alam</p>
 
-        </div>
-        <div class="name-and-icon">
-            <img src="images/Group 14.svg" alt="">
-            <p>Email Address</p>
-            <p>abulfarhad.ibnalam@gmail.com</p>
 
-        </div>
-        <div class="name-and-icon">
-            <img src="images/Group 14.svg" alt="">
-            <p>Linkedin</p>
-            <p>www.linkedin.com/in/abulfarhad/</p>
 
-        </div>
-        <div class="name-and-icon">
-            <img src="images/Group 14.svg" alt="">
-            <p>Phone</p>
-            <p>+8801521-561986</p>
-
-        </div>
-    </div>
 
 
 
