--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <header>
         <nav class="nav">
             <ul class="nav-items">
-                <li>About me</li>
-                <li>Services</li>
-                <li>Contact me</li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#my-skills">My skills</a></li>
+                <li><a href="">Contact me</a></li>
             </ul>
         </nav>
 
@@ -49,7 +50,7 @@
 
     </header>
 
-    <div class="about">
+    <div class="about" id="about">
         <p class="section-title">About</p>
         <p class="about-description">
             I am Farhad, currently pursuing a BSc in Computer Science and Engineering at Brac University. I am a
@@ -61,93 +62,135 @@
             about exploring their transformative potential across industries. My commitment to both competitive
             programming and emerging technologies drives me to continuously learn and grow in the field.
         </p>
+    </div>
 
-        <div class="about-info">
-            <div class="name-and-icon">
-                <img src="images/Group 14.svg" alt="">
-                <p>Full Name</p>
-                <p>K. M. Abul Farhad-Ibn-Alam</p>
+    <div class="about-info">
+        <div class="name-and-icon">
+            <img src="images/Group 14.svg" alt="">
+            <p>Full Name</p>
+            <p>K. M. Abul Farhad-Ibn-Alam</p>
 
+        </div>
+        <div class="name-and-icon">
+            <img src="images/Group 14.svg" alt="">
+            <p>Email Address</p>
+            <p>abulfarhad.ibnalam@gmail.com</p>
+
+        </div>
+        <div class="name-and-icon">
+            <img src="images/Group 14.svg" alt="">
+            <p>Linkedin</p>
+            <p>www.linkedin.com/in/abulfarhad/</p>
+
+        </div>
+        <div class="name-and-icon">
+            <img src="images/Group 14.svg" alt="">
+            <p>Phone</p>
+            <p>+8801521-561986</p>
+
+        </div>
+    </div>
+
+    <div class="what-i-do" id="my-skills">
+        <p class="section-title">What I do</p>
+        <div class="skill-section">
+            <div class="skill-info-container">
+                <img src="images/Vector (2).png" alt="">
+                <p class="skill-name">Software<br>Development</p>
             </div>
-            <div class="name-and-icon">
-                <img src="images/Group 14.svg" alt="">
-                <p>Email Address</p>
-                <p>abulfarhad.ibnalam@gmail.com</p>
 
+            <div class="skill-info-container">
+                <img src="images/Vector (1).png" alt="">
+                <p class="skill-name">Web<br>Development</p>
             </div>
-            <div class="name-and-icon">
-                <img src="images/Group 14.svg" alt="">
-                <p>Linkedin</p>
-                <p>www.linkedin.com/in/abulfarhad/</p>
 
-            </div>
-            <div class="name-and-icon">
-                <img src="images/Group 14.svg" alt="">
-                <p>Phone</p>
-                <p>+8801521-561986</p>
-
+            <div class="skill-info-container">
+                <img src="images/Vector.png" alt="">
+                <p class="skill-name">Competitive<br>Programming</p>
             </div>
         </div>
+    </div>
 
-        <div class="what-i-do">
-            <p class="section-title">What I do</p>
-            <div class="skill-section">
-                <div class="skill-info-container">
-                    <img src="images/Vector (2).png" alt="">
-                    <p class="skill-name">Software<br>Development</p>
-                </div>
-
-                <div class="skill-info-container">
-                    <img src="images/Vector (1).png" alt="">
-                    <p class="skill-name">Web<br>Development</p>
-                </div>
-
-                <div class="skill-info-container">
-                    <img src="images/Vector.png" alt="">
-                    <p class="skill-name">Competitive<br>Programming</p>
-                </div>
+    <div class="my-skills">
+        <p class="section-title">My Skills</p>
+        <div class="all-skills">
+            <div class="skill">
+                <p class="lang-rating">80%<br>
+                    <span class="lang-name">C++</span>
+                </p>
             </div>
-        </div>
 
-        <div class="my-skills">
-            <p class="section-title">My Skills</p>
-            <div class="all-skills">
-                <div class="skill">
-                    <p class="lang-rating">80%<br>
-                    <span class="lang-name">C++</span></p>
-                </div>
-
-                <div class="skill">
-                    <p class="lang-rating">80% <br>
-                        <span class="lang-name">Python</span>
-                    </p>
-                </div>
-
-                <div class="skill">
-                    <p class="lang-rating">60% <br>
-                        <span class="lang-name">HTML</span>
-                    </p>
-                </div>
-
-                <div class="skill">
-                    <p class="lang-rating">40% <br>
-                        <span class="lang-name">CSS</span>
-                    </p>
-                </div>
-
-                <div class="skill">
-                    <p class="lang-rating">50% <br>
-                        <span class="lang-name">JavaScript</span>
-                    </p>
-                </div>
-
-                <!-- <div class="skill">
-                    <p class="lang-rating">50%</p>
-                    <p class="lang-name">JavaScript</p>
-                </div> -->
-
+            <div class="skill">
+                <p class="lang-rating">80% <br>
+                    <span class="lang-name">Python</span>
+                </p>
             </div>
+
+            <div class="skill">
+                <p class="lang-rating">60% <br>
+                    <span class="lang-name">HTML</span>
+                </p>
+            </div>
+
+            <div class="skill">
+                <p class="lang-rating">40% <br>
+                    <span class="lang-name">CSS</span>
+                </p>
+            </div>
+
+            <div class="skill">
+                <p class="lang-rating">50% <br>
+                    <span class="lang-name">JavaScript</span>
+                </p>
+            </div>
+
+            <!-- <div class="skill">
+                <p class="lang-rating">50%</p>
+                <p class="lang-name">JavaScript</p>
+            </div> -->
+
         </div>
+    </div>
+
+    <div class="achievements" id="achievements">
+        <p class="section-title">Achievements</p>
+        <table class="achievements-table">
+            <tr>
+                <th>Competition/Program</th>
+                <th>Result</th>
+            </tr>
+            <tr>
+                <td>ICPC Asia-West Continent Final 2023</td>
+                <td>Honorable Mention</td>
+            </tr>
+
+            <tr>
+                <td>ICPC Regional Dhaka 2023</td>
+                <td>40<sup>th</sup> among 223 teams</td>
+            </tr>
+
+            <tr>
+                <td>NCPC JU (onsite) 2023</td>
+                <td>47<sup>th</sup> among 196 teams</td>
+            </tr>
+
+            <tr>
+                <td>BRACU CS Spectrum Intra University Programming
+                    Contest by BRACU IEEE Computer Society 2023</td>
+                <td>3<sup>rd</sup> among 60+ teams</td>
+            </tr>
+
+            <tr>
+                <td>Meta Hacker Cup Round 2</td>
+                <td>Qualified</td>
+            </tr>
+
+            <tr>
+                <td>HackerRank Intermediate Problem Solving Test</td>
+                <td>Passed</td>
+            </tr>
+
+        </table>
     </div>
 
 
