added footer and icons from fontawesome

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/baf36cb059.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -192,6 +194,36 @@
 
         </table>
     </div>
+
+    <footer>
+        <div class="contact-text">
+            <p class="text-1">Contact Me</p>
+            <p class="text-2">If you want to hire me or have other queries, then knock me anytime. I try to reply within
+                24 hours.</p>
+            <p class="text-3">abulfarhad.ibnalam@gmail.com</p>
+        </div>
+
+        <div class="contact-icons">
+
+            <a href="https://www.facebook.com/sakib.ibnalam/">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+
+
+
+            <a href="https://www.linkedin.com/in/abulfarhad/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+
+
+
+            <a href="https://github.com/abul-farhad ">
+                <i class="fa-brands fa-github"></i>
+            </a>
+
+        </div>
+
+    </footer>
 
 
 
