updated anchor tag:  added rel and target

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <header>
         <nav class="nav">
             <ul class="nav-items">
-                <li><a href="#about">About me</a></li>
-                <li><a href="#achievements">Achievements</a></li>
-                <li><a href="#my-skills">My skills</a></li>
-                <li><a href="">Contact me</a></li>
+                <li><a href="#about" rel="this is about me">About me</a></li>
+                <li><a href="#achievements" rel="this is about my achievements">Achievements</a></li>
+                <li><a href="#my-skills" rel="this is about my skills">My skills</a></li>
+                <li><a href="#contact-me" rel="this is about my contact info">Contact me</a></li>
             </ul>
         </nav>
 
@@ -196,7 +196,7 @@
     </div>
 
     <footer>
-        <div class="contact-text">
+        <div class="contact-text" id="contact-me">
             <p class="text-1">Contact Me</p>
             <p class="text-2">If you want to hire me or have other queries, then knock me anytime. I try to reply within
                 24 hours.</p>
@@ -205,19 +205,19 @@
 
         <div class="contact-icons">
 
-            <a href="https://www.facebook.com/sakib.ibnalam/">
+            <a href="https://www.facebook.com/sakib.ibnalam/" rel="My facbook account" target="_blank">
                 <i class="fa-brands fa-facebook"></i>
             </a>
 
 
 
-            <a href="https://www.linkedin.com/in/abulfarhad/">
+            <a href="https://www.linkedin.com/in/abulfarhad/" rel="My linkedin account" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
 
 
 
-            <a href="https://github.com/abul-farhad ">
+            <a href="https://github.com/abul-farhad" rel="My github account" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
 
