added modification for CSE391 assignment tasks

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header>
         <nav class="nav">
             <ul class="nav-items">
+                <li><a href="/others.html">Others</a></li>
                 <li><a href="#about" rel="this is about me">About me</a></li>
                 <li><a href="#achievements" rel="this is about my achievements">Achievements</a></li>
                 <li><a href="#my-skills" rel="this is about my skills">My skills</a></li>
@@ -55,7 +56,8 @@
     <div class="about" id="about">
         <p class="section-title">About</p>
         <p class="about-description">
-            I am Farhad, currently pursuing a BSc in Computer Science and Engineering at Brac University. I am a
+            I am Farhad, currently pursuing a BSc in Computer Science and Engineering at <a
+                href="https://www.bracu.ac.bd/" target="_blank" rel="My University Name"><i>Brac University</i></a>. I am a
             dedicated competitive programmer with a passion for problem-solving and algorithmic challenges. Throughout
             my undergraduate studies, I have actively participated in numerous programming contests, refining my skills
             in data structures, algorithms, and writing efficient code under pressure. I am particularly interested in
@@ -63,6 +65,14 @@
             Additionally, I am deeply drawn to Artificial Intelligence, especially Large Language Models, and am excited
             about exploring their transformative potential across industries. My commitment to both competitive
             programming and emerging technologies drives me to continuously learn and grow in the field.
+        </p>
+
+        <p>Here is one of my favourite quotes from One Piece-The Greatest Anime of All Time</p>
+        <p class="quotes">
+            "When do you think people die? When they are shot through the heart by the bullet of a pistol? No... <br>
+            When they are ravaged by an incurable disease? No... <br>
+            When they drink a soup made from a poisonous mushroom!? No! <br> 
+            It's when… they are <span class="special-quote-word">forgotten</span>" - Dr. Hiriluk
         </p>
     </div>
 
@@ -157,10 +167,12 @@
     <div class="achievements" id="achievements">
         <p class="section-title">Achievements</p>
         <table class="achievements-table">
-            <tr>
-                <th>Competition/Program</th>
-                <th>Result</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Competition/Program</th>
+                    <th>Result</th>
+                </tr>
+            </thead>
             <tr>
                 <td>ICPC Asia-West Continent Final 2023</td>
                 <td>Honorable Mention</td>
@@ -191,6 +203,10 @@
                 <td>HackerRank Intermediate Problem Solving Test</td>
                 <td>Passed</td>
             </tr>
+            <tr>
+                <td colspan="2" style="text-align: center;">BUET IUPC 2023, SUST IUPC 2024, CUET IUPC 2024 and So on
+                </td>
+            </tr>
 
         </table>
     </div>
@@ -219,6 +235,10 @@
 
             <a href="https://github.com/abul-farhad" rel="My github account" target="_blank">
                 <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a href="https://piazza.com/bracu.ac.bd/spring2023/cse391/" rel="CSE391 PIZZA Link" target="_blank">
+                <i class="fa-brands fa-pied-piper-pp"></i>
             </a>
 
         </div>
